

set(BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(BUILD_EXAMPLES "" CACHE BOOL OFF FORCE)
set(XTENSOR_DISABLE_EXCEPTIONS ON CACHE BOOL "" FORCE)
set(XTENSOR_USE_XSIMD 1 CACHE BOOL "" FORCE)
add_subdirectory(xtl)
add_subdirectory(xsimd)
add_subdirectory(xtensor)

# only include corrade if we're testing
if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND PSYDAPT_BUILD_TESTS)
    set(WITH_INTERCONNECT OFF CACHE BOOL "" FORCE)
    set(WITH_PLUGINMANAGER OFF CACHE BOOL "" FORCE)
    set(WITH_UTILITY OFF CACHE BOOL "" FORCE)
    set(WITH_RC OFF CACHE BOOL "" FORCE)
    add_subdirectory(corrade EXCLUDE_FROM_ALL)
endif()

